--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.js"></script>
   </head>
+
   <body>
     <div class="container">
       <header class="header">
@@ -22,21 +24,32 @@
           </h1>
         </div>
       </header>
+
       <div class="content-container">
         <div class="active-users-panel" id="active-user-container">
           <h3 class="panel-title">Active Users:</h3>
         </div>
+
         <div class="video-chat-container">
           <h2 class="talk-info" id="talking-with-info">
             Select active user on the left menu.
           </h2>
+
           <div class="video-container">
-            <video autoplay class="remote-video" id="remote-video"></video>
+            <video autoplay muted class="remote-video" id="remote-video"></video>
+            
             <video autoplay muted class="local-video" id="local-video"></video>
+          </div>
+
+          <div style="position: absolute; top: 70px; left: 30px;">
+            <button id="call-out" style="background-color: red; color: white; cursor: pointer;">
+              Raccrocher
+            </button>
           </div>
         </div>
       </div>
     </div>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
